# annotation_tool_for_yolo

./: README.md
annotation/: CMakeLists.txt  annotation.cpp
